@@ -18,11 +18,10 @@
  */
 package co.elastic.apm.agent.dubbo.advice;
 
-import co.elastic.apm.agent.bci.HelperClassManager;
-import co.elastic.apm.agent.bci.VisibleForAdvice;
-import co.elastic.apm.agent.dubbo.helper.AlibabaDubboAttachmentHelper;
+import co.elastic.apm.agent.dubbo.helper.AlibabaDubboTextMapPropagator;
 import co.elastic.apm.agent.dubbo.helper.DubboTraceHelper;
 import co.elastic.apm.agent.impl.ElasticApmTracer;
+import co.elastic.apm.agent.impl.GlobalTracer;
 import co.elastic.apm.agent.impl.transaction.AbstractSpan;
 import co.elastic.apm.agent.impl.transaction.Outcome;
 import co.elastic.apm.agent.impl.transaction.Span;
@@ -35,59 +34,42 @@ import net.bytebuddy.asm.Advice;
 
 import javax.annotation.Nullable;
 
-@VisibleForAdvice
 public class AlibabaMonitorFilterAdvice {
 
+    private static final ElasticApmTracer tracer = GlobalTracer.requireTracerImpl();
+
     @Nullable
-    @VisibleForAdvice
-    public static ElasticApmTracer tracer;
-
-    @VisibleForAdvice
-    public static HelperClassManager<AlibabaDubboAttachmentHelper> helperManager;
-
-    public static void init(ElasticApmTracer tracer) {
-        AlibabaMonitorFilterAdvice.tracer = tracer;
-        helperManager = HelperClassManager.ForAnyClassLoader.of(tracer,
-            "co.elastic.apm.agent.dubbo.helper.AlibabaDubboAttachmentHelperImpl");
-    }
-
-    @Advice.OnMethodEnter(suppress = Throwable.class)
-    public static void onEnterFilterInvoke(@Advice.Argument(1) Invocation invocation,
-                                           @Advice.Local("span") Span span,
-                                           @Advice.Local("apiClazz") Class<?> apiClazz,
-                                           @Advice.Local("transaction") Transaction transaction) {
+    @Advice.OnMethodEnter(suppress = Throwable.class, inline = false)
+    public static Object onEnterFilterInvoke(@Advice.Argument(1) Invocation invocation) {
         RpcContext context = RpcContext.getContext();
-        AlibabaDubboAttachmentHelper helper = helperManager.getForClassLoaderOfClass(Invocation.class);
-        if (helper == null || tracer == null) {
-            return;
-        }
         // for consumer side, just create span, more information will be collected in provider side
         AbstractSpan<?> active = tracer.getActive();
         if (context.isConsumerSide() && active != null) {
-            span = DubboTraceHelper.createConsumerSpan(tracer, invocation.getInvoker().getInterface(),
+            Span span = DubboTraceHelper.createConsumerSpan(tracer, invocation.getInvoker().getInterface(),
                 invocation.getMethodName(), context.getRemoteAddress());
             if (span != null) {
-                span.propagateTraceContext(invocation, helper);
+                span.propagateTraceContext(invocation, AlibabaDubboTextMapPropagator.INSTANCE);
+                return span;
             }
         } else if (active == null) {
             // for provider side
-            transaction = tracer.startChildTransaction(invocation, helper, Invocation.class.getClassLoader());
+            Transaction transaction = tracer.startChildTransaction(invocation, AlibabaDubboTextMapPropagator.INSTANCE, Invocation.class.getClassLoader());
             if (transaction != null) {
                 transaction.activate();
                 DubboTraceHelper.fillTransaction(transaction, invocation.getInvoker().getInterface(), invocation.getMethodName());
+                return transaction;
             }
         }
-
+        return null;
     }
 
-    @Advice.OnMethodExit(suppress = Throwable.class, onThrowable = Throwable.class)
+    @Advice.OnMethodExit(suppress = Throwable.class, onThrowable = Throwable.class, inline = false)
     public static void onExitFilterInvoke(@Advice.Argument(1) Invocation invocation,
                                           @Advice.Return @Nullable Result result,
-                                          @Advice.Local("span") @Nullable Span span,
-                                          @Advice.Thrown @Nullable Throwable t,
-                                          @Advice.Local("transaction") @Nullable Transaction transaction) {
-        AbstractSpan<?> actualSpan = span != null ? span : transaction;
-        if (actualSpan == null) {
+                                          @Advice.Enter @Nullable Object spanObj,
+                                          @Advice.Thrown @Nullable Throwable t) {
+        AbstractSpan<?> span = (AbstractSpan<?>) spanObj;
+        if (span == null) {
             return;
         }
 
@@ -95,14 +77,14 @@ public class AlibabaMonitorFilterAdvice {
         if (result != null) { // will be null in case of thrown exception
             resultException = result.getException();
         }
-        actualSpan
+        span
             .captureException(t)
             .captureException(resultException)
             .withOutcome(t != null || resultException != null ? Outcome.FAILURE : Outcome.SUCCESS)
             .deactivate();
 
         if (!(RpcContext.getContext().getFuture() instanceof FutureAdapter)) {
-            actualSpan.end();
+            span.end();
         }
         // else: end when ResponseCallback is called (see AlibabaResponseCallbackInstrumentation)
     }
